# contax

./: .env  .eslintrc.json  .gitignore  .prettierrc  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  Counter.vue  contacts.ts  main.ts  router.ts
frontend/src/components/: ContactForm.vue
frontend/src/views/: ContactDetailPage.vue  ContactListPage.vue
server/: __init__.py  alembic.ini  auth.py  compression.py  config.py  controllers.py  db.py  dto.py  env.py  error_handlers.py  logging.py  models.py  routers.py  routing.py  service.py  session.py  templating.py  validation.py
server/contacts/: controllers.py  dto.py  forms.py  models.py  service.py
server/migrations/: env.py
server/migrations/versions/: 2023_09_20_2033-d362b4da417e_init_database.py  2023_09_21_1424-284b734c33bc_.py
server/templates/: base.html.j2  htmx_base.html.j2  index.html.j2  spa.html.j2
server/templates/contacts/: contact_detail.html.j2  contact_list.html.j2  macros.html.j2
server/templates/contacts/htmx/: contact_detail.html.j2  contact_detail_page.html.j2  contact_form.html.j2  contact_list.html.j2  contact_list_page.html.j2
server/templates/errors/: 404.html.j2
server/templates/forms/: macros.html.j2
server/templates/macros/: forms.html.j2
server/templates/users/: login.html.j2  register.html.j2
server/users/: __init__.py  controllers.py  dto.py  forms.py  helpers.py  models.py  security.py  service.py
