[tool.poetry]
authors = ["geeshta <stefan.foldesi@outlook.com>"]
description = ""
name = "contax"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
litestar = {extras = ["cryptography", "picologging", "pydantic", "redis", "sqlalchemy", "standard"], version = "^2.0.1"}
python = "^3.11"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"
