[tool.poetry]
authors = ["geeshta <stefan.foldesi@outlook.com>"]
description = ""
name = "contax"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = "^0.19.0"
litestar = {extras = ["cryptography", "picologging", "pydantic", "redis", "sqlalchemy", "standard"], version = "^2.0.1"}
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
djlint = "^1.34.0"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.djlint]
ignore = "H030,H031"
